# aiomqttc

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CHANGELOG.md  LICENSE  README.md  aiomqttc.py  config.json  config.py  deploy.sh  main.py  matt_burst.sh  mqtt_client_demo.py  pyproject.toml  subscribe.sh  wifi.py
