[project]
name = "aiomqttc"
version = "1.0.3"
authors = [
    { name = "Carlos Tangerino", email = "carlos.tangerino@gmail.com" }
]
description = "aiomqttc - Asynchronous MQTT Client"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.0.0",
]

[tool.setuptools]
py-modules = ["aiomqttc", "main", "wifi", "config"]