[project]
name = "aiomqttc"
version = "1.0.3"
description = "aiomqttc - Asynchronous MQTT Client"
authors = [
    { name = "Carlos Tangerino", email = "carlos.tangerino@gmail.com" }
]
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.11"
keywords = ["mqtt", "asyncio", "iot", "client", "micropython"]
dependencies = [
    "rich>=14.0.0",
]

[tool.setuptools]
py-modules = ["aiomqttc", "main", "wifi", "config"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"